# labor-law-guardian

./: .gitignore  LICENSE  README.md  docker-compose.yml  env.example
backend/: pyproject.toml
backend/app/agents/: workflows.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/ingestion/: cleaner.py  law_article_chunker.py  scraper.py
backend/app/models/: chunk.py  law.py
backend/app/rag/: README.md  config.py  factory.py  graph_builder.py  interface.py  retriever.py  types.py
backend/app/rag/core/: README.md  (+1 more)
backend/app/schemas/: law.py
backend/app/tools/: calculator.py
backend/data/eval_dataset/: master_eval_dataset.json
backend/data/law_data/: enforcement_rules.json  labor_standards_act.json  law_config.py
backend/experiments/: RTV_0.0.1_20260122-122745.json  RTV_0.0.1_20260123-120659.json  RTV_0.0.1_20260123-134118.json  RTV_0.0.1_20260123-143004.json  RTV_0.0.1_20260123-154043.json  RTV_0.0.1_20260123-161928.json  RTV_0.0.1_20260127-130445.json  RTV_0.0.2_20260123-120327.json  RTV_0.0.2_20260123-132921.json  RTV_0.0.2_20260123-133727.json  RTV_0.0.2_20260123-143051.json  RTV_0.0.2_20260123-154350.json  RTV_0.0.2_20260127-130626.json  RTV_0.0.3_20260123-131746.json  RTV_0.0.3_20260123-133307.json  RTV_0.0.3_20260123-133447.json  RTV_0.0.3_20260123-143217.json  RTV_0.0.3_20260123-154519.json  RTV_0.0.3_20260127-131058.json  eval_report.md
backend/scripts/: generate_articles_map.py  generate_master_dataset.py  run_eval.py  run_ingestion.py  verify_refactor.py
backend/tests/: test_law_article_chunker.py
(+45 files in other folders)
